related course text no longer behind chevrons
added a bit of padding to the related course slider

--- a/public/css/courses.css
+++ b/public/css/courses.css
@@ -106,3 +106,7 @@ td.module-text {
 	display:block;
 	margin-bottom:.5rem;
 }
+
+.related-courses .kent-slide {
+	padding: 0 2rem;
+}
